<resources>
    <string name="NavegacionEntrePantallas">NAVEGACIÓN ENTRE PANTALLAS</string>
    <string name="app_name">LayoutsGrupalFinal</string>
    <string name="Con">Conectar</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar">Iniciar Sesion</string>
    <string name="Olv">¿Olvidaste tu contraseña?</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="EstadoCivil">Estado Civil</string>
    <string name="Cargo">Cargo</string>
    <string-array name="EstadoCivilValues">
        <item>Soltero</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>Viudo</item>
    </string-array>
    <string-array name="CargoValues">
        <item>Programador</item>
        <item>Director</item>
        <item>Manager</item>
        <item>Currito</item>
    </string-array>
    <string name="Productos">Producto</string>
    <string name="Subtotal">Subtotal</string>
    <string name="JabonDeManos">Jabón de manos x1</string>
    <string name="Pantalla01">Pantalla 1</string>
    <string name="Pantalla02">Pantalla 2</string>
    <string name="Pantalla03">Pantalla 3</string>
    <string name="Pantalla04">Pantalla 4</string>
</resources>