<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Con"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Correo" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Contraseña" />

    <Button
        android:id="@+id/button"
        android:layout_width="255dp"
        android:layout_height="76dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F9F5F4"
        android:text="@string/Iniciar"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Olv"
        android:textColor="#52A2F7"
        android:layout_marginRight="30dp"
        android:textSize="20sp" />


</LinearLayout>